[package]
name = "planet-wrangler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
piston = "0.53.2"
piston_window = "0.127.0"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
piston2d-sprite = "0.67.0"
pistoncore-sdl2_window = "0.68.0"
rust-embed = "8.0.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
